HFS/src/compiling_error.txt
In file included from /usr/include/c++/5/chrono:35:0,
                 from /home/evan/git/HF-Stability/HFS/src/fileIO.cpp:3:
/usr/include/c++/5/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support \
  ^
In file included from /home/evan/git/HF-Stability/HFS/src/fileIO.hpp:12:0,
                 from /home/evan/git/HF-Stability/HFS/src/fileIO.cpp:1:
/home/evan/git/HF-Stability/HFS/src/base_funcs.hpp: In function ‘void HFS::toFirstBrillouinZone(arma::vec&)’:
/home/evan/git/HF-Stability/HFS/src/base_funcs.hpp:46:30: error: ‘NDIM’ was not declared in this scope
         for (uint i = 0; i < NDIM; ++i) {
                              ^
/home/evan/git/HF-Stability/HFS/src/base_funcs.hpp: At global scope:
/home/evan/git/HF-Stability/HFS/src/base_funcs.hpp:55:39: error: variable or field ‘toFirstBrillouinZone’ declared void
 inline void toFirstBrillouinZone(std::array<scalar, NDIM>& k_ary) {
                                       ^
/home/evan/git/HF-Stability/HFS/src/base_funcs.hpp:55:34: error: ‘array’ is not a member of ‘std’
 inline void toFirstBrillouinZone(std::array<scalar, NDIM>& k_ary) {
                                  ^
/home/evan/git/HF-Stability/HFS/src/base_funcs.hpp:55:51: error: expected primary-expression before ‘,’ token
 inline void toFirstBrillouinZone(std::array<scalar, NDIM>& k_ary) {
                                                   ^
/home/evan/git/HF-Stability/HFS/src/base_funcs.hpp:55:53: error: ‘NDIM’ was not declared in this scope
 inline void toFirstBrillouinZone(std::array<scalar, NDIM>& k_ary) {
                                                     ^
/home/evan/git/HF-Stability/HFS/src/base_funcs.hpp:55:60: error: ‘k_ary’ was not declared in this scope
 inline void toFirstBrillouinZone(std::array<scalar, NDIM>& k_ary) {
                                                            ^
/home/evan/git/HF-Stability/HFS/src/fileIO.cpp:131:1: error: expected ‘}’ at end of input
 }
 ^
